index : ul li Added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Some Demo is Here</h1>
     <p>And this is just a paragraph</p>
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+    </ul>
 </body>
 </html>
